welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: value ! is not a member of Boolean
while (!estSurBiscuit!){
                     ^